<resources>
    <string name="app_name">Smart Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_name">SMART HOME</string>
    <string name="login">Đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="loading">Đang tải...</string>
    <string name="background">background</string>
    <string name="icon">icon\n</string>
    <string name="face_icon">face_icon</string>
    <string name="face_authentication">Xác thực khuôn mặt</string>
    <string name="speech_icon">speech icon</string>
    <string name="speech_authentication">Xác thực giọng nói</string>
    <string name="authentication">Xác thực</string>
    <string name="remote">Điều khiển</string>
    <string name="follow">Theo dõi</string>
    <string name="setting">Cài đặt</string>
    <string name="back">Trở lại</string>
    <string name="face_auth_manual">Vui lòng di chuyển mặt đến máy ảnh</string>
    <string name="audio_record_manual">Nhấn giữ để nói</string>
    <string name="mic_btn">mic_btn</string>
    <string name="temperature">Nhiệt độ</string>
    <string name="humidity">Độ ẩm</string>
    <string name="icon_device">icon device</string>
    <string name="details">Xem chi tiết</string>
    <string name="success">Thành công</string>
    <string name="failure">Thất bại</string>
    <string name="info">Thông tin</string>
    <string name="dot">.</string>
    <string name="id_tv">ID:</string>
    <string name="email_tv">Email:</string>
    <string name="address_tv">Địa chỉ:</string>
    <string name="temp_id">25°C</string>
    <string name="test_humidity">50%</string>
    <string name="text_email">testhome3@smarthome.com</string>
    <string name="text_address">123 Kiều Sơn Đen</string>
    <string name="logout">Đăng xuất</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="exit">Thoát</string>
    <string name="confirm">Xác nhận</string>
    <string name="more">More</string>
    <string name="location">Vị trí</string>
    <string name="little">little</string>
    <string name="detail">Chi tiết</string>
    <string name="on">bật</string>
    <string name="off">tắt</string>
    <string name="fan_off">0</string>
    <string name="fan_high">3</string>
    <string name="fan_medium">2</string>
    <string name="fan_low">1</string>
    <string name="open">mở</string>
    <string name="close">đóng</string>
    <string name="touch_up">Touch up</string>
    <string name="login_background">login_backgound</string>
    <string name="hi_command">Xin chào,</string>
    <string name="testhome1">testhome1</string>
    <string name="authenticate_command">Xác thực để tiếp tục</string>
    <string name="record_command">Xin chào, tôi là người dùng của hệ thống nhà thông minh, hãy kích hoạt chế độ điều khiển hỗ trợ giọng nói.</string>
    <string name="project_description">Quản lý thiết bị của nhà bạn</string>
</resources>