<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".view.fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/face_auth_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_rounded_square"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp">

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/face_icon"
                    android:src="@drawable/ic_face" />

            </androidx.cardview.widget.CardView>

            <GridLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:columnCount="2"
                android:rowCount="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/id_tv"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_profile"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/id_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_columnWeight="7"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/temp_id"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_profile"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/email_tv"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_profile"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_columnWeight="2"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/address_tv"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_profile"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_columnWeight="3"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/text_email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_profile"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/address_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_columnWeight="3"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/text_address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_profile"
                    android:textStyle="bold|italic" />
            </GridLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/change_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/home_rounded_square"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="12dp"
            android:padding="8dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/change_password"
                android:src="@drawable/ic_change_password" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/minor_title"
                android:layout_weight="1"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_logout_button"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="30dp"
            android:padding="8dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logout"
                android:src="@drawable/ic_logout" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/minor_title"
                android:layout_weight="1"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>